--- a/src/app/components/top-movies/top-movies.component.html
+++ b/src/app/components/top-movies/top-movies.component.html
@@ -16,7 +16,7 @@
                     <tbody>
                         <tr *ngFor="let movie of movies">
                             <td class="align-middle">
-                                <img src="{{ movie.imageUrl }}" height="100rem" width="100rem" />
+                                <img *ngIf="movie.imageUrl && movie.imageUrl !== ''" src="{{ movie.imageUrl }}" height="100rem" width="100rem" />
                             </td>
                             <td class="align-middle"> {{ movie.title }} </td>
                             <td class="align-middle">{{movie.totalEstimatedRevenue | currency:'USD'}}</td>
