Add setting service to communicate with user management server. Store/retrieve settings for users.
Better type checking on charts.
Output users settings in dummy-protected.

--- a/src/app/components/dummy-protected/dummy-protected.component.html
+++ b/src/app/components/dummy-protected/dummy-protected.component.html
@@ -6,6 +6,14 @@
                 <div *ngIf="isAuthenticated && userFullName" class="login-status-user-info">
                     Welcome back {{ userFullName}}!
                 </div>
+                <div>
+                    <table>
+                        <tr *ngFor="">
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
