Add Stripe payment support. Refactor dummy-protected to account-information. Update README Display subscriptoin status on Account information page.

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -20,7 +20,7 @@
                 </a>
             </li>
             <li>
-                <a routerLink="/dummyProtected" routerLinkActive="active-link"> 
+                <a routerLink="/account" routerLinkActive="active-link"> 
                     <img src="../../../assets/lock.png" height=50px width="50px" class="img-responsive">
                     Account
                 </a>
