--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import '~@okta/okta-signin-widget/dist/css/okta-sign-in.min.css';
+@import '../node_modules/@okta/okta-signin-widget/dist/css/okta-sign-in.min.css';
 
 
 /* 
